recursion.cons.lessons.recursion.cons.Min.scala.error
min:3: error: type mismatch;
 found   : List[Int]
 required: Int
		return l.tail
                         ^